# KinectServer

./: .gitignore  CMakeLists.txt  README.md  kinect_server.cc  test.py  test_program.cc
prerequisites/: install_protobuf.sh
proto/: .navirice_image.proto.swp  CMakeLists.txt  navirice_image.proto
python_src/: navirice_get_image.py  navirice_image_pb2.py  server_port_test.py
src/: .navirice_image_distribution_server.cc.swp  navirice.h  navirice_ansi_codes.h  navirice_config.h  navirice_image.h  navirice_image_distribution_server.cc  navirice_image_distribution_server.h  navirice_image_impl.cc  navirice_image_impl.h  navirice_inet_util.h
src/protobuf/: how_to_compile.txt  navirice_image.pb.cc  navirice_image.pb.h  navirice_image.proto  navirice_image_pb2.py
